# leaf-focus

./: .gitignore  README.md  Vagrantfile  pyproject.toml  requirements.txt  scrapy.cfg  setup.cfg
.github/workflows/: build-test.yml  codeql-analysis.yml
ansible/: ansible.cfg  playbook.yml
leaf_focus/: file_cache.py  run.py
leaf_focus/command/: download.py  entry.py  pipeline.py  report.py
leaf_focus/components/: location.py  operations.py  serialise.py
leaf_focus/components/data/: identify_item.py  image_item.py  info_item.py  pdf_item.py  text_item.py
leaf_focus/components/download/: celery_item_pipeline_component.py  pdf_item.py  prometheus_extension.py  settings.py  spider.py
leaf_focus/components/ocr/: item.py  prepare.py  recognise.py
leaf_focus/components/pdf/: identify.py  images.py  info.py  text.py
leaf_focus/components/store/: identify.py  location.py
leaf_focus/download/: command.py  download_service.py  items.py  middlewares.py  pipelines.py  settings.py
leaf_focus/download/crawl/: component.py  item.py  operation.py  prefect_task.py  settings.py  spider.py
leaf_focus/download/extract/: extract_service.py
leaf_focus/download/items/: pdf_item.py
leaf_focus/download/middleware/: base_spider_middleware.py  pdf_image_spider_middleware.py  pdf_info_spider_middleware.py  pdf_text_spider_middleware.py
leaf_focus/download/spiders/: pdf_spider.py
leaf_focus/handwriting/: handwriting_service.py
leaf_focus/ocr/: command.py  found_text.py  ocr_service.py
leaf_focus/ocr/prepare/: component.py  operation.py  prefect_task.py
leaf_focus/ocr/recognise/: component.py  item.py  ocr_wrapper.py  operation.py  prefect_task.py
leaf_focus/operations/ocr/: prepare.py  recognise.py
leaf_focus/operations/pdf/: identify.py  images.py  info.py  text.py
leaf_focus/pdf/: command.py
leaf_focus/pdf/identify/: component.py  item.py  operation.py  prefect_task.py
leaf_focus/pdf/images/: component.py  item.py  operation.py  prefect_task.py
leaf_focus/pdf/info/: component.py  item.py  operation.py  (+1 more)
leaf_focus/pipeline/: app.py  command.py  construct.py  prefect_flow.py  tasks.py
leaf_focus/report/: command.py  content_item.py  content_report.py  metadata_item.py  metadata_report.py  normalise.py  parse_text.py  report_entry_item.py  report_item.py  report_service.py  result_item.py
leaf_focus/resources/: aph.json  corrections.yml  definitions.yml  example.yml  known-text.yml  logging.yaml  parse-alterations.yml  parse-metadata.yml  parse-sections-line.yml  parse-sections-table.yml  sections.yml
leaf_focus/support/: config.py  location.py  log_config.py  serialise.py
leaf_focus/text/: found_text.py  text_service.py
tests/: base_test.py  conftest.py  test_all_operations.py  test_components_ocr_item.py  test_components_pdf_images.py  test_components_pdf_info.py  test_components_pdf_text.py  test_components_store_identify.py  test_components_store_location.py  test_download_component.py  test_download_operation.py  test_ocr_item.py  test_ocr_prepare_component.py  test_ocr_prepare_operation.py  test_ocr_recognise_component.py  test_ocr_recognise_item.py  test_ocr_recognise_operation.py  test_pdf_identify_component.py  test_pdf_identify_operation.py  test_pdf_images.py  test_pdf_images_component.py  test_pdf_images_item.py  test_pdf_images_operation.py  test_pdf_info_component.py  test_pdf_info_item.py  test_pdf_info_operation.py  test_pdf_text_component.py  test_pdf_text_operation.py  test_pdf_text_prefect.py  test_report_page.py  test_support_location.py
tests/resources/: example1.docx  example1.txt  generic-data-file.txt
(+76 files in other folders)
