[tool.poetry]
name = "leaf-focus"
version = "0.1.0"
description = ""
authors = ["Mark <cofiem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.0"
matplotlib = "^3.4.2"
keras-ocr = "^0.8.7"
tensorflow = "^2.5.0"
editdistance = "^0.5.3"
opencv-python = "^4.5.2"
lmdb = "^1.2.1"
mmh3 = "^3.0.0"
Pillow = "^8.2.0"
pytz = "^2021.1"
celery = "^5.1.2"
flower = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
