[tool.poetry]
name = "leaf-focus"
version = "0.4.0"
description = "Extract structured text from pdf files."
license = "MIT"
authors = ["Mark <cofiem@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/cofiem/leaf-focus"
repository = "https://github.com/cofiem/leaf-focus"
documentation = "https://github.com/cofiem/leaf-focus"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Scrapy = "^2.5.0"
matplotlib = "^3.4.2"
keras-ocr = "^0.8.7"
tensorflow = "^2.5.0"
editdistance = "^0.6.0"
opencv-python-headless = "^4.5.2.54"
Pillow = "^8.2.0"
pytz = "^2021.1"
prefect = {extras = ["viz"], version = "^0.15.6"}
click = "^7.0"
colorama = "^0.4.4"
bokeh = "^2.3.0"
numpy = "^1.22.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "21.7b0"  # TODO: dep typing-extensions conflicts with tensorflow
pytest = "^6.2.4"
coverage = { extras = ["toml"], version = "^6.0.0" }
mypy = "^0.910"
pytest-cov = "^3.0.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
leaf-focus = 'leaf_focus.run:cli'

# mypy global options:

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_any_explicit = true
disallow_untyped_defs = true

# coverage options:

[tool.coverage.run]
omit = [
    '*/.venv/*',
    '*/tests/*',
    '*/command.py'
]
source = [
    './leaf_focus/'
]


# pytest options:

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "needs_exe: tests that need an external program to run"
]

# black options:

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | tests/.*/setup.py
)/
'''

